force-app/main/default/objects/IndividualApplication/fields/nepa_action_plan_launched__c.field-meta.xml
<CustomField>
    <fullName>nepa_action_plan_launched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE by NEPA_ActionPlan_Launcher flow when a permit-type-specific action plan is created for this process. Guards against duplicate launches on subsequent nepa_process_stage__c updates.</description>
    <label>Action Plan Launched</label>
    <type>Checkbox</type>
</CustomField>