force-app/main/default/objects/IndividualApplication/fields/nepa_action_type__c.field-meta.xml
<CustomField><fullName>nepa_action_type__c</fullName>
        <description>Primary action verb describing what the applicant proposes to do. Primary discriminator for Tier 2 CE code selection when sector+type is ambiguous.</description>
        <inlineHelpText>What is the primary nature of the proposed action?</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Construct New</fullName><default>false</default><label>Construct New</label></value>
                <value><fullName>Modify Existing</fullName><default>false</default><label>Modify Existing</label></value>
                <value><fullName>Renew or Extend Existing</fullName><default>false</default><label>Renew or Extend Existing</label></value>
                <value><fullName>Abandon or Decommission</fullName><default>false</default><label>Abandon or Decommission</label></value>
                <value><fullName>Operate or Maintain Existing</fullName><default>false</default><label>Operate or Maintain Existing</label></value>
                <value><fullName>Research or Study</fullName><default>false</default><label>Research or Study</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>