force-app/main/default/objects/IndividualApplication/fields/nepa_agency_id__c.field-meta.xml
<CustomField><fullName>nepa_agency_id__c</fullName>
        <description>Process-specific ID assigned by the agency, distinct from the Federal Unique ID.</description>
        <inlineHelpText>Agency-assigned process ID (distinct from the Federal Unique ID).</inlineHelpText>
        <label>Agency Process ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>