force-app/main/default/objects/IndividualApplication/fields/nepa_applicant_contact__c.field-meta.xml
<CustomField><fullName>nepa_applicant_contact__c</fullName>
        <description>Primary contact for the applicant organization. Used to route RFIs and correspondence during the intake phase.</description>
        <inlineHelpText>Primary contact for this applicant.</inlineHelpText>
        <label>Applicant Contact</label>
        <deleteConstraint>SetNull</deleteConstraint>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NEPA Applications (Applicant Contact)</relationshipLabel>
        <relationshipName>NEPA_Applications_ApplicantContact</relationshipName>
        <type>Lookup</type>
    </CustomField>