force-app/main/default/objects/IndividualApplication/fields/nepa_ce_rationale_supplemental__c.field-meta.xml
<CustomField><fullName>nepa_ce_rationale_supplemental__c</fullName>
        <description>Free-text supplemental CE rationale. Companion to nepa_process_code__c (the structured CE code picklist). Addresses the ce_category free-text chaos identified in NEPATEC feature engineering — structured code goes in nepa_process_code__c; narrative explanation and non-standard citations go here.</description>
        <inlineHelpText>Supplemental CE rationale, non-standard citations, or coordinator notes. Use nepa_process_code__c for the structured CE code.</inlineHelpText>
        <label>CE Rationale Supplemental</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>