force-app/main/default/objects/IndividualApplication/fields/nepa_challenge_prediction_basis__c.field-meta.xml
<CustomField>
    <fullName>nepa_challenge_prediction_basis__c</fullName>
    <description>Structured output from NEPA_Challenge_Predictor flow. Records each rule evaluated, its fired/not-fired status, cleared/open status, and risk delta contribution. Format: one rule per line — RuleLabel | Priority | Status (Fired/Not Fired) | Cleared/Open | +N pts. Populated on every run; overwritten on re-evaluation. Used by the Challenge Prediction Panel in the Risk Intelligence section.</description>
    <inlineHelpText>Challenge Predictor rule evaluation results. Updated each time the flow runs.</inlineHelpText>
    <label>Challenge Prediction Basis</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>