force-app/main/default/objects/IndividualApplication/fields/nepa_challenge_prediction_notes__c.field-meta.xml
<CustomField><fullName>nepa_challenge_prediction_notes__c</fullName>
        <description>Plain-language explanation of each predicted challenge ground and the attributes that triggered it.</description>
        <inlineHelpText>Why each challenge ground was predicted based on this process's attributes.</inlineHelpText>
        <label>Challenge Prediction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>