force-app/main/default/objects/IndividualApplication/fields/nepa_challenge_risk_delta__c.field-meta.xml
<CustomField><fullName>nepa_challenge_risk_delta__c</fullName>
        <description>Accumulated risk delta points from NEPA_Challenge_Prediction_Rule__mdt records matched by the NEPA_Challenge_Predictor flow. Each matched rule contributes its Risk_Delta__c value. Passed as additional input to the BRE scoring pipeline.</description>
        <inlineHelpText>Additional risk points from matched challenge prediction rules (sector-circuit, tribal plaintiff). Feeds the litigation risk composite score.</inlineHelpText>
        <defaultValue>0</defaultValue>
        <label>Challenge Risk Delta Points</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>