force-app/main/default/objects/IndividualApplication/fields/nepa_classification_basis__c.field-meta.xml
<CustomField><fullName>nepa_classification_basis__c</fullName>
        <description>Audit trail of which CE Screener rule(s) fired, the matched tier, agency, and any override conditions applied. Written by the NEPA_CE_Screener Flow. Retained in the administrative record.</description>
        <inlineHelpText>Screener audit trail: which rule matched and why. Retained for the administrative record.</inlineHelpText>
        <label>Classification Basis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>