force-app/main/default/objects/IndividualApplication/fields/nepa_climate_assessment_complete__c.field-meta.xml
<CustomField>
    <fullName>nepa_climate_assessment_complete__c</fullName>
    <description>Set to true by coordinator when the climate change assessment section is complete and incorporated into the EA or EIS. Clears the NEPA_Phase2_Climate_Gate validation rule, allowing advancement to Decision stage. Required before FONSI or ROD issuance when Climate_Assessment_Required__c = true.</description>
    <inlineHelpText>Check when climate assessment is complete and incorporated into the NEPA document. Required to advance to Decision when Phase 2 applies.</inlineHelpText>
    <label>Climate Assessment Complete</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>