force-app/main/default/objects/IndividualApplication/fields/nepa_climate_assessment_required__c.field-meta.xml
<CustomField>
    <fullName>nepa_climate_assessment_required__c</fullName>
    <description>True when NEPA_Phase2_Applicable__c = true and the review pathway is EA or EIS. Requires a dedicated climate change assessment section per 40 CFR 1502.17 before the FONSI or ROD can be signed. Distinct from extraordinary circumstances — this is a Phase 2 documentation mandate, not a GIS proximity trigger.</description>
    <inlineHelpText>Climate assessment required under CEQ Phase 2 rule (40 CFR 1502.17). Must complete before advancing to Decision stage.</inlineHelpText>
    <label>Climate Assessment Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>