force-app/main/default/objects/IndividualApplication/fields/nepa_clock_pause_end__c.field-meta.xml
<CustomField><fullName>nepa_clock_pause_end__c</fullName>
        <description>Date the statutory clock suspension ended. When populated, the NEPA_SLA_Due_Date_Setter recalculates nepa_fra_adjusted_deadline__c by adding (pause_end - pause_start) days to nepa_fra_statutory_deadline__c.</description>
        <inlineHelpText>Date the clock suspension ended. Triggers automatic adjusted deadline recalculation.</inlineHelpText>
        <label>Clock Pause End</label>
        <type>Date</type>
    </CustomField>