force-app/main/default/objects/IndividualApplication/fields/nepa_clock_pause_start__c.field-meta.xml
<CustomField><fullName>nepa_clock_pause_start__c</fullName>
        <description>Date the statutory clock was suspended. Together with nepa_clock_pause_end__c, used to calculate total suspended days and adjust the effective deadline. Null if clock is not paused.</description>
        <inlineHelpText>Date the statutory clock suspension began. Required when nepa_clock_paused__c is true.</inlineHelpText>
        <label>Clock Pause Start</label>
        <type>Date</type>
    </CustomField>