force-app/main/default/objects/IndividualApplication/fields/nepa_clock_paused__c.field-meta.xml
<CustomField><fullName>nepa_clock_paused__c</fullName>
        <description>True when the FRA statutory clock is formally suspended. Under 42 U.S.C. 4336a, the clock may pause only when the project sponsor explicitly agrees in writing to a suspension. This flag blocks NEPA_SLA_Escalation_Monitor from marking the process overdue while the suspension is in effect.</description>
        <inlineHelpText>Statutory clock suspended with project sponsor agreement. Pause requires documented sponsor consent — see nepa_clock_pause_reason__c.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Statutory Clock Paused</label>
        <type>Checkbox</type>
    </CustomField>