force-app/main/default/objects/IndividualApplication/fields/nepa_co_permits_required__c.field-meta.xml
<CustomField><fullName>nepa_co_permits_required__c</fullName>
        <description>Semicolon-delimited list of required co-permits and authorizations identified from the NEPA Permit Matrix for this project sector and type. Populated automatically by NEPA_Permit_Coordinator flow when nepa_review_type__c is set. Coordinator should verify and supplement as needed.</description>
        <inlineHelpText>Required permits identified from sector/type matrix. Verify and supplement before advancing to scoping.</inlineHelpText>
        <label>Co-Permits Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>