force-app/main/default/objects/IndividualApplication/fields/nepa_comment_period_days__c.field-meta.xml
<CustomField><fullName>nepa_comment_period_days__c</fullName>
        <description>Number of calendar days between the public comment period start and end dates. Used by the Defensibility Gap Checker to verify the 30-day minimum required by 40 CFR 1503.1.</description>
        <inlineHelpText>Calculated days for the public comment period. Must be 30 or more for EIS processes.</inlineHelpText>
        <formula>nepa_public_comment_period_end_date__c - nepa_public_comment_period_start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Period Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>