force-app/main/default/objects/IndividualApplication/fields/nepa_connected_actions_identified__c.field-meta.xml
<CustomField><fullName>nepa_connected_actions_identified__c</fullName>
        <description>Set by coordinator when connected or similar actions under 40 CFR 1508.25(a) have been identified and scoped. Required by the Stage Gate VR-001 extension to advance EA/EIS to Draft EIS Publication. Addresses DG-002 (connected/cumulative actions not systematically scoped).</description>
        <inlineHelpText>Connected and similar actions (40 CFR 1508.25) have been identified and scoped. Required before Draft EIS publication for EA/EIS processes.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Connected Actions Identified</label>
        <type>Checkbox</type>
    </CustomField>