force-app/main/default/objects/IndividualApplication/fields/nepa_cooperating_agencies__c.field-meta.xml
<CustomField><fullName>nepa_cooperating_agencies__c</fullName>
        <description>Semicolon-delimited list of cooperating agencies identified from the NEPA Permit Matrix for this project sector and type. Populated automatically by NEPA_Permit_Coordinator flow. Coordinator should confirm participation before issuing NOI/NOA.</description>
        <inlineHelpText>Cooperating agencies from permit matrix. Confirm participation before publishing NOI.</inlineHelpText>
        <label>Cooperating Agencies (Matrix)</label>
        <type>TextArea</type>
    </CustomField>