force-app/main/default/objects/IndividualApplication/fields/nepa_days_in_current_stage__c.field-meta.xml
<CustomField><fullName>nepa_days_in_current_stage__c</fullName>
        <description>Formula field: number of calendar days elapsed since nepa_last_stage_transition__c (or nepa_start_date__c if no transition recorded). Used by NEPA_Timeline_Risk_Assessor to determine risk tier.</description>
        <inlineHelpText>Days elapsed in the current process stage. Recalculates daily.</inlineHelpText>
        <formula>IF(
  NOT(ISBLANK(nepa_last_stage_transition__c)),
  TODAY() - DATEVALUE(nepa_last_stage_transition__c),
  IF(
    NOT(ISBLANK(nepa_start_date__c)),
    TODAY() - nepa_start_date__c,
    0
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>