force-app/main/default/objects/IndividualApplication/fields/nepa_defensibility_gaps__c.field-meta.xml
<CustomField><fullName>nepa_defensibility_gaps__c</fullName>
        <description>Semicolon-delimited list of missing record elements detected by the Defensibility Gap Flow (e.g., ROD Missing; No Public Engagement Events).</description>
        <inlineHelpText>Missing record elements that could create defensibility risk.</inlineHelpText>
        <label>Defensibility Gaps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>