force-app/main/default/objects/IndividualApplication/fields/nepa_defensibility_score__c.field-meta.xml
<CustomField><fullName>nepa_defensibility_score__c</fullName>
        <description>Percentage (0-100) of expected administrative record elements present for this process type. Recalculated when documents, engagements, or timeline events change.</description>
        <inlineHelpText>Record completeness score: percentage of required documents and milestones present.</inlineHelpText>
        <label>Defensibility Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>