force-app/main/default/objects/IndividualApplication/fields/nepa_defensibility_updated__c.field-meta.xml
<CustomField><fullName>nepa_defensibility_updated__c</fullName>
        <description>Timestamp of the last defensibility gap check.</description>
        <inlineHelpText>When the defensibility gaps were last evaluated.</inlineHelpText>
        <label>Defensibility Updated</label>
        <type>DateTime</type>
    </CustomField>