force-app/main/default/objects/IndividualApplication/fields/nepa_description__c.field-meta.xml
<CustomField><fullName>nepa_description__c</fullName>
        <description>Optional description of the process, distinct from the project description.</description>
        <inlineHelpText>Optional description of the process (distinct from project description).</inlineHelpText>
        <label>Process Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>