force-app/main/default/objects/IndividualApplication/fields/nepa_disturbance_acres__c.field-meta.xml
<CustomField><fullName>nepa_disturbance_acres__c</fullName>
        <description>Total estimated surface disturbance in acres. Used by the CE Screener to enforce per-code acreage thresholds (e.g., EPA Sec.390(b)(1) ≤5 acres). Exceedance downgrades CE to EA.</description>
        <inlineHelpText>Estimated total surface disturbance (acres). Required for CE acreage threshold checks.</inlineHelpText>
        <label>Disturbance Acres</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>